// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when required 1`] = `
<div
  className="components-field-label-m__required components-field-label-m__basic"
>
  <label
    className=""
    htmlFor="some-id"
    onClick={[Function]}
  >
    <div
      id="child"
    />
  </label>
</div>
`;

exports[`should render correctly with a tooltip 1`] = `
<div
  className="components-field-label-m__basic"
>
  <label
    className="components-field-label-m__has-tooltip"
    htmlFor="some-id"
    onClick={[Function]}
  >
    <div
      id="child"
    />
  </label>
  <Overlay
    container={
      Label {
        "context": Object {},
        "handleClick": [Function],
        "handleHide": [Function],
        "props": Object {
          "children": <div
            id="child"
          />,
          "disabled": false,
          "error": null,
          "htmlFor": "some-id",
          "required": false,
          "tooltip": "The Tooltip",
        },
        "refs": Object {},
        "state": Object {
          "ignoreHide": false,
          "showHelp": false,
        },
        "updater": Updater {
          "_callbacks": Array [],
          "_renderer": ReactShallowRenderer {
            "_context": Object {},
            "_element": <Label
              disabled={false}
              error={null}
              htmlFor="some-id"
              required={false}
              tooltip="The Tooltip"
            >
              <div
                id="child"
              />
            </Label>,
            "_forcedUpdate": false,
            "_instance": [Circular],
            "_newState": null,
            "_rendered": <div
              className="components-field-label-m__basic"
            >
              <label
                className="components-field-label-m__has-tooltip"
                htmlFor="some-id"
                onClick={[Function]}
              >
                <div
                  id="child"
                />
              </label>
              <Overlay
                container={[Circular]}
                onHide={[Function]}
                placement="bottom"
                rootClose={true}
                show={false}
                target={[Function]}
                transition={[Function]}
              >
                <div
                  className="components-field-label-m__tooltip"
                >
                  The Tooltip
                </div>
              </Overlay>
            </div>,
            "_rendering": false,
            "_updater": [Circular],
          },
        },
      }
    }
    onHide={[Function]}
    placement="bottom"
    rootClose={true}
    show={false}
    target={[Function]}
    transition={[Function]}
  >
    <div
      className="components-field-label-m__tooltip"
    >
      The Tooltip
    </div>
  </Overlay>
</div>
`;

exports[`should render correctly with an error 1`] = `
<div
  className="components-field-label-m__basic-error components-field-label-m__basic components-field-label-m__error"
>
  <label
    className=""
    htmlFor="some-id"
    onClick={[Function]}
  >
    <div
      id="child"
    />
  </label>
</div>
`;

exports[`should render correctly with no tooltip 1`] = `
<div
  className="components-field-label-m__basic"
>
  <label
    className=""
    htmlFor="some-id"
    onClick={[Function]}
  >
    <div
      id="child"
    />
  </label>
</div>
`;
